--- a/src/components/cart/style.css
+++ b/src/components/cart/style.css
@@ -1,21 +1,21 @@
 .modal-wrapper {
   display: flex;
-  position: absolute;
+  position: fixed;
   justify-content: center;
   align-items: center;
   left: 0px;
-  right: 0px;
   top: 0px;
-  bottom: 0px;
+  height: 100vh;
+  width: 100vw;
   background-color: rgba(0, 0, 0, 0.7);
   z-index: 9;
 }
 
 .modal {
   position: relative;
-  max-width: 960px;
+  max-height: calc(100% - 64px);
   width: calc(100% - 64px);
-  overflow: hidden;
+  overflow: scroll;
   border-radius: 10px;
   background: #fff;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
@@ -44,5 +44,13 @@
 
 .Cart-total-value {
   margin-left: 53px;
+}
 
+html,
+body {
+  scrollbar-gutter: stable;
+}
+
+body.scroll-lock {
+  overflow: hidden;
 }
