--- a/src/components/cart/style.css
+++ b/src/components/cart/style.css
@@ -15,7 +15,7 @@
   position: relative;
   max-height: calc(100% - 64px);
   width: calc(100% - 64px);
-  overflow: scroll;
+  overflow-y: auto;
   border-radius: 10px;
   background: #fff;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
