--- a/src/components/cart/style.css
+++ b/src/components/cart/style.css
@@ -1,32 +1,16 @@
-.modal-wrapper {
-  display: flex;
-  position: fixed;
-  justify-content: center;
-  align-items: center;
-  left: 0px;
-  top: 0px;
-  height: 100vh;
-  width: 100vw;
-  background-color: rgba(0, 0, 0, 0.7);
-  z-index: 9;
-  padding-left: calc(100vw - 100%);
-}
-
-.modal {
-  max-height: calc(100% - 64px);
-  width: calc(100% - 64px);
+.Cart {
+  max-height: calc(100vh - 64px);
+  width: 960px;
   overflow-y: auto;
-  max-width: calc(1024px - 64px);
   border-radius: 10px;
   background: #fff;
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
 }
 
-.modal .body {
+.Cart-body {
   margin-top: 71px;
 }
 
-.modal .footer {
+.Cart-footer {
   height: 130px;
   padding-right: 120px;
   display: flex;
@@ -36,7 +20,6 @@
 .Cart-total {
   margin-left: auto;
   text-align: right;
-  font-family: Arial;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
@@ -45,8 +28,4 @@
 
 .Cart-total-value {
   margin-left: 53px;
-}
-
-body.scroll-lock {
-  overflow: hidden;
 }
