--- a/src/components/cart/style.css
+++ b/src/components/cart/style.css
@@ -29,3 +29,15 @@
   padding-left: 20px;
   min-width: 100px;
 }
+
+.Cart-is-empty {
+  /* text-align: center; */
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 58px;
+  border-top: 1px dashed #ccc;
+  border-bottom: 1px dashed #ccc;
+}
