fix: width of Cart component

--- a/src/components/cart/style.css
+++ b/src/components/cart/style.css
@@ -1,6 +1,7 @@
 .Cart {
   max-height: calc(100vh - 64px);
-  width: 960px;
+  max-width: 960px;
+  width: calc(100vw - 64px);
   overflow-y: auto;
   border-radius: 10px;
   background: #fff;
