ref: move List-is-empty element to List

--- a/src/components/list/style.css
+++ b/src/components/list/style.css
@@ -9,3 +9,15 @@
 .List-item:first-of-type {
   border-top: 1px dashed #ccc;
 }
+
+
+.List-isEmpty {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 58px;
+  border-top: 1px dashed #ccc;
+  border-bottom: 1px dashed #ccc;
+}
