--- a/src/components/item-basket/style.css
+++ b/src/components/item-basket/style.css
@@ -3,7 +3,8 @@
   display: flex;
   justify-content: flex-start;
   transition: background-color 1s;
-  padding-left: 10px
+  padding-left: 10px;
+  cursor: pointer;
 }
 
 .ItemBasket-code {
