--- a/src/components/basket-tool/style.css
+++ b/src/components/basket-tool/style.css
@@ -14,3 +14,13 @@
   font-weight: bold;
   margin: 0 20px;
 }
+
+.BasketTool-link {
+  margin-right: auto;
+
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21px;
+
+  color: #0087e9;
+}
