--- a/src/components/item-basket/style.css
+++ b/src/components/item-basket/style.css
@@ -16,6 +16,10 @@
   cursor: pointer;
 }
 
+.ItemBasket-title:hover{
+  text-decoration: underline;
+}
+
 .ItemBasket-right {
   padding: 20px 20px 20px 10px;
   display: flex;
