--- a/src/components/item/style.css
+++ b/src/components/item/style.css
@@ -20,6 +20,15 @@
   cursor: pointer;
 }
 
+.Item-title:link{
+  text-decoration: none;
+  color: #000;
+}
+
+.Item-title:hover{
+  text-decoration: underline;
+}
+
 .Item-actions {
   padding: 20px 20px 20px 10px;
   display: flex;
