fix: item-basket color and hover effect

--- a/src/components/item-basket/style.css
+++ b/src/components/item-basket/style.css
@@ -15,8 +15,12 @@
   padding: 20px 10px;
   cursor: pointer;
 }
+.ItemBasket-title:link {
+  text-decoration: none;
+  color: black;
+}
 
-.ItemBasket-title:hover{
+.ItemBasket-title:hover {
   text-decoration: underline;
 }
 
