--- a/src/components/comment-add-form/style.css
+++ b/src/components/comment-add-form/style.css
@@ -1,9 +1,9 @@
 .CommentAddForm {
-  /* padding: 15px 0 0;  */
+  padding: 15px 0;
 }
 
 .CommentAddForm_global {
-  padding: 0 40px;
+  padding: 15px 40px 30px;
 }
 
 .CommentAddForm-title {
