--- a/src/components/comment-add-form/style.css
+++ b/src/components/comment-add-form/style.css
@@ -37,7 +37,8 @@
 }
 
 .CommentAddForm-not-authorized {
-  margin-top: 30px;
+  padding: 0;
+  margin: 0;
   font-size: 16px;
   line-height: 18px;
 }
